27-Jun-2016 Fixes #265. Utility functions, such as CompileAgainst etc, in the C and Installer packages have been updated to cope with dependent modules not existing. For example, if a dependent module is filtered on some platforms, and yet the build script that depends on it is written in a platform agnostic way, these functions need to perform a nullop.

25-Jun-2016 Fixes #262. Override the macro 'ImportLibraryName' to change the leafname of the import library of the DLL. This allows it to be different to the DLL name (the macro 'OutputName'). The default import library name matches the DLL name.

25-Jun-2016 Fixes #261. VisualC Native dynamic library builds now specify the path of the import library on the linker command line. VisualStudio projects generated for DLLs already did this.

23-Jun-2016 Fixes #244. Added the Bam.Core.TokenizedString property WorkingDirectory to C.ConsoleApplication (DynamicLibrary and Plugin derived classes throw an exception). VisualStudio and Xcode projects now use this in the project settings. Thanks to @joshmartel for the suggestion on how to implement this. As a side-effect in Xcode, the command line option --Xcode.generateSchemes, has been removed, as it is requirement to set the working directory.

18-Jun-2016 Fixes #258. WindowsSDK-10 package no longer causes a compilation failure in mono due to an errant throw after an unconditional function return.

09-Jun-2016 ======== Version 1.0.3 beta 1 Release ========
